--- a/mymwebsite/templates/faq.html
+++ b/mymwebsite/templates/faq.html
@@ -73,13 +73,14 @@
                 <h5 class="mb-0">
                     <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse4"
                        aria-expanded="false" aria-controls="collapse4">
-                        {% trans "FAQ #4" %}
+                        {% trans "What is the advantage of capturing images using augmented reality?" %}
                     </a>
                 </h5>
             </div>
             <div id="collapse4" class="collapse" role="tabpanel" aria-labelledby="heading4">
                 <div class="card-block">
-                    {% trans "Answer to FAQ#4" %}
+                    {% trans "The captured images will be automatically addressed to the storage folders (VPs), on the other hand the images captured without the augmented reality will need to be manually addressed to the folders." %}
+                    {% trans "You also ensure that the desired angle and position for the image captures are the same as you have set when configured the VP." %}
                 </div>
             </div>
         </div>
@@ -88,13 +89,13 @@
                 <h5 class="mb-0">
                     <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse5"
                        aria-expanded="false" aria-controls="collapse5">
-                        {% trans "FAQ #5" %}
+                        {% trans "Can I capture images with my smartphone in any position?" %}
                     </a>
                 </h5>
             </div>
             <div id="collapse5" class="collapse" role="tabpanel" aria-labelledby="heading5">
                 <div class="card-block">
-                    {% trans "Answer to FAQ#5" %}
+                    {% trans "Yes you can, but bear in mind that the MyMensor Mobile App is always in landscape and that is the way your photos and videos are shown in our Web App" %}
                 </div>
             </div>
         </div>
@@ -103,13 +104,14 @@
                 <h5 class="mb-0">
                     <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse6"
                        aria-expanded="false" aria-controls="collapse6">
-                        {% trans "FAQ #6" %}
+                        {% trans "Can I capture images without using Augmented Reality?" %}
                     </a>
                 </h5>
             </div>
             <div id="collapse6" class="collapse" role="tabpanel" aria-labelledby="heading6">
                 <div class="card-block">
-                    {% trans "Answer to FAQ#6" %}
+                    {% trans "Yes. Just turn off the AR in the initial capture screen. Let the picture go automatically to the VP AR-OFF folder or address a destination VP and click one of the two shutter buttons, either for a photo or a mini-movie (10 seconds maximum)." %}
+                    {% trans "The destination folder might even be a folder already configured, but that you understood that it made more sense to archive it" %}
                 </div>
             </div>
         </div>
@@ -118,13 +120,15 @@
                 <h5 class="mb-0">
                     <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse7"
                        aria-expanded="false" aria-controls="collapse7">
-                        {% trans "FAQ #7" %}
+                        {% trans "What are the requirements to use the system?" %}
                     </a>
                 </h5>
             </div>
             <div id="collapse7" class="collapse" role="tabpanel" aria-labelledby="heading7">
                 <div class="card-block">
-                    {% trans "Answer to FAQ#7" %}
+                    {% trans "To fully use the MyMensor Mobile App you need a smartphone with at least Android Lolipop installed, you can use it with KitKat but usage will suffer and not all features will be present." %}
+                    {% trans "Also, to use the MyMensor Mobile App your smartphone needs to have a screen with HD resolution (1280x720) at least." %}
+                    {% trans "To use the MyMensor Web App you generally need a modern browser, the newer the best!" %}
                 </div>
             </div>
         </div>
@@ -133,13 +137,13 @@
                 <h5 class="mb-0">
                     <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse8"
                        aria-expanded="false" aria-controls="collapse8">
-                        {% trans "FAQ #8" %}
+                        {% trans "How do I register and start using MyMensor?" %}
                     </a>
                 </h5>
             </div>
             <div id="collapse8" class="collapse" role="tabpanel" aria-labelledby="heading8">
                 <div class="card-block">
-                    {% trans "Answer to FAQ#8" %}
+                    {% trans "Click in the register button and follow the instructions! More info can be found in the videos section, specially on the Mymensor Mobile App - First Steps video" %}
                 </div>
             </div>
         </div>
@@ -148,13 +152,13 @@
                 <h5 class="mb-0">
                     <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse9"
                        aria-expanded="false" aria-controls="collapse9">
-                        {% trans "FAQ #9" %}
+                        {% trans "How do I get more details about MyMensor Mobile App screens?" %}
                     </a>
                 </h5>
             </div>
             <div id="collapse9" class="collapse" role="tabpanel" aria-labelledby="heading9">
                 <div class="card-block">
-                    {% trans "Answer to FAQ#9" %}
+                    {% trans "Info can be found in the videos section, specially on the Mymensor Mobile App - Feature Tour Video" %}
                 </div>
             </div>
         </div>
@@ -163,17 +167,167 @@
                 <h5 class="mb-0">
                     <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse10"
                        aria-expanded="false" aria-controls="collapse10">
-                        {% trans "FAQ #10" %}
+                        {% trans "How do I setup to capture images using Augmented Reality?" %}
                     </a>
                 </h5>
             </div>
             <div id="collapse10" class="collapse" role="tabpanel" aria-labelledby="heading10">
                 <div class="card-block">
-                    {% trans "Answer to FAQ#10" %}
+                    {% trans "Info can be found in the videos section, specially on the Mymensor Mobile App - Using Augmented Reality Video" %}
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header" role="tab" id="heading11">
+                <h5 class="mb-0">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse11"
+                       aria-expanded="false" aria-controls="collapse11">
+                        {% trans "How do I capture an image with or without using Augmented Reality?" %}
+                    </a>
+                </h5>
+            </div>
+            <div id="collapse11" class="collapse" role="tabpanel" aria-labelledby="heading11">
+                <div class="card-block">
+                    {% trans "Info can be found in the videos section, specially on the Mymensor Mobile App - Capture Images and Videos Video" %}
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header" role="tab" id="heading12">
+                <h5 class="mb-0">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse12"
+                       aria-expanded="false" aria-controls="collapse12">
+                        {% trans "Where can I find more details abot the MyMensor Web App?" %}
+                    </a>
+                </h5>
+            </div>
+            <div id="collapse12" class="collapse" role="tabpanel" aria-labelledby="heading12">
+                <div class="card-block">
+                    {% trans "Info can be found in the videos section, specially on the Mymensor Web App - Feature Tour Video Video" %}
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header" role="tab" id="heading13">
+                <h5 class="mb-0">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse13"
+                       aria-expanded="false" aria-controls="collapse13">
+                        {% trans "How do I transform images into data?" %}
+                    </a>
+                </h5>
+            </div>
+            <div id="collapse13" class="collapse" role="tabpanel" aria-labelledby="heading13">
+                <div class="card-block">
+                    {% trans "Info can be found in the videos section, specially on the Mymensor Web App - Configuring VPs and TAGs Video" %}
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header" role="tab" id="heading14">
+                <h5 class="mb-0">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse14"
+                       aria-expanded="false" aria-controls="collapse14">
+                        {% trans "How do I manage Media and Data information in MyMensor Web App?" %}
+                    </a>
+                </h5>
+            </div>
+            <div id="collapse14" class="collapse" role="tabpanel" aria-labelledby="heading14">
+                <div class="card-block">
+                    {% trans "Info can be found in the videos section, specially on the Mymensor Web App - Media and Data Video" %}
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header" role="tab" id="heading15">
+                <h5 class="mb-0">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse15"
+                       aria-expanded="false" aria-controls="collapse15">
+                        {% trans "What are the USES AND BENEFITS of Mymensor?" %}
+                    </a>
+                </h5>
+            </div>
+            <div id="collapse15" class="collapse" role="tabpanel" aria-labelledby="heading15">
+                <div class="card-block">
+                    {% trans "Please check our explainer video at the top of our video section." %}
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header" role="tab" id="heading16">
+                <h5 class="mb-0">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse16"
+                       aria-expanded="false" aria-controls="collapse16">
+                        {% trans "Can I use my login credentials on more than one smartphone?" %}
+                    </a>
+                </h5>
+            </div>
+            <div id="collapse16" class="collapse" role="tabpanel" aria-labelledby="heading16">
+                <div class="card-block">
+                    {% trans "Yes, but the configuration setup will be the same for your user in all smartphones."%}
+                    {% trans "In other words, you can divide your VPs to monitor multiple places, but the VPs configuration will be the same in all places." %}
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header" role="tab" id="heading17">
+                <h5 class="mb-0">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse17"
+                       aria-expanded="false" aria-controls="collapse17">
+                        {% trans "How do I make a backup of the MyMensor Mobile App configuration?" %}
+                    </a>
+                </h5>
+            </div>
+            <div id="collapse17" class="collapse" role="tabpanel" aria-labelledby="heading17">
+                <div class="card-block">
+                    {% trans "Please use the backup portion in the Setup Menu of the MyMensor WebApp. You should backup your configuration frequently." %}
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header" role="tab" id="heading18">
+                <h5 class="mb-0">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse18"
+                       aria-expanded="false" aria-controls="collapse18">
+                        {% trans "How do I delete an image or video?" %}
+                    </a>
+                </h5>
+            </div>
+            <div id="collapse18" class="collapse" role="tabpanel" aria-labelledby="heading18">
+                <div class="card-block">
+                    {% trans "In the Mobile, while seing the captures, touch the trash bin to erase the photo only on the smartphone." %}
+                    {% trans "To delete the image in the database you need to locate it in the Media page, there you will find a trash bin where you can make the final deletion from the database." %}
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header" role="tab" id="heading19">
+                <h5 class="mb-0">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse19"
+                       aria-expanded="false" aria-controls="collapse19">
+                        {% trans "How do I move an image or video between VPs folders?" %}
+                    </a>
+                </h5>
+            </div>
+            <div id="collapse19" class="collapse" role="tabpanel" aria-labelledby="heading19">
+                <div class="card-block">
+                    {% trans "Images captured without the use of augmented reality, which will automatically go to the AR-OFF folder or are manually directed to other folders before capture, are captured for movement. In Media there is a button to make the move destined for another folder. Images obtained with augmented reality (AR-ON) will automatically go to the preconfigured folders, so you can not move them." %}
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header" role="tab" id="heading20">
+                <h5 class="mb-0">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse20"
+                       aria-expanded="false" aria-controls="collapse20">
+                        {% trans "FAQ #20" %}
+                    </a>
+                </h5>
+            </div>
+            <div id="collapse20" class="collapse" role="tabpanel" aria-labelledby="heading20">
+                <div class="card-block">
+                    {% trans "Answer to FAQ#20" %}
                 </div>
             </div>
         </div>
     </div>
-
-
 {% endblock %}
