--- a/mymwebsite/templates/faq.html
+++ b/mymwebsite/templates/faq.html
@@ -126,7 +126,7 @@
             </div>
             <div id="collapse7" class="collapse" role="tabpanel" aria-labelledby="heading7">
                 <div class="card-block">
-                    {% trans "To fully use the MyMensor Mobile App you need a smartphone with at least Android Lolipop installed, you can use it with KitKat but usage will suffer and not all features will be present." %}
+                    {% trans "To fully use the MyMensor Mobile App you need a smartphone with at least Android Lollipop installed, you can use it with KitKat but usage will suffer and not all features will be present." %}
                     {% trans "Also, to use the MyMensor Mobile App your smartphone needs to have a screen with HD resolution (1280x720) at least." %}
                     {% trans "To use the MyMensor Web App you generally need a modern browser, the newer the best!" %}
                 </div>
@@ -197,7 +197,7 @@
                 <h5 class="mb-0">
                     <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse12"
                        aria-expanded="false" aria-controls="collapse12">
-                        {% trans "Where can I find more details abot the MyMensor Web App?" %}
+                        {% trans "Where can I find more details about the MyMensor Web App?" %}
                     </a>
                 </h5>
             </div>
@@ -465,7 +465,7 @@
             <div id="collapse30" class="collapse" role="tabpanel" aria-labelledby="heading30">
                 <div class="card-block">
                     {% trans "Yes, once you have entered our Web App with your credentials, click on the logged in item and set up facebook, twitter accounts that you want to use to automatically share your media." %}
-                    {% trans "Then go to the Configure menu item and select the VPs item. You must check the share box in each of the VP folders that you want to share automatically." %}
+                    {% trans "Then go to the Setup menu item and select the VPs item. You must check the share box in each of the VP folders that you want to share automatically." %}
                     {% trans "In this same screen you can also select an email to automatically receive the captured media. Unlike Facebook and Twitter, emails accounts may be different for each VP." %}
                 </div>
             </div>
