--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -133,7 +133,7 @@
                                 <div class="col-sm-6">
                                     <h5>{% trans "Reliability and Safety " %}</h5>
                                     <p>{% trans " We use world-class servers, maintaining first-class reliability and security." %}<a
-                                            href="{% url 'docs' %}" class="text-primary">{% trans " See here." %}</a>.
+                                            href="{% url 'docs' %}" class="text-primary">{% trans " See here." %}</a>
                                     </p>
                                 </div>
                             </div>
