--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -267,7 +267,7 @@
                     <div class="row">
                         <div class="col-md-4 px-4 pb-2 mb-5">
                             <div class="px-2 mb-2">
-                                <h5 class="text-primary text-uppercase mb-4">MyMensor</h5>
+                                <h5 class="text-primary mb-4 alert alert-info">MyMensor</h5>
                                 {% if LANGUAGE_CODE == "pt" %}
                                     <img class="mb-4" src="{% static "images/comingsooncomp_pt.svg" %}">
                                 {% elif LANGUAGE_CODE == "pt-br" %}
@@ -292,13 +292,13 @@
 
                         <div class="col-md-4 px-4 pb-2 mb-5">
                             <div class="px-2">
-                                <h5 class="text-primary text-uppercase mb-4">MyMensorAR</h5>
+                                <h5 class="text-primary mb-4 alert alert-info">MyMensor<strong>AR</strong></h5>
                                 <img class="mb-4" src="{% static "images/price.svg" %}">
                                 <p class="pb-2">{% trans "The one size fits all solution. Use Augmented Reality and Data Features to control your personal and business projects" %}</p>
                             </div>
 
                             <ul class="list-unstyled list-bordered text-xs-left my-4">
-                                <li class="py-4"><strong>{% trans "ALL MYMENSOR FEATURES PLUS" %}</strong></li>
+                                <li class="py-4"><strong>{% trans "ALL MyMensor FEATURES PLUS" %}</strong></li>
                                 <li class="py-4">
                                     <strong>{% trans "AR" %}</strong>{% trans " automatic and precise captures" %}</li>
                                 <li class="py-4">
@@ -310,7 +310,7 @@
                         </div>
                         <div class="col-md-4 px-4 pb-1 mb-5">
                             <div class="px-2">
-                                <h5 class="text-primary text-uppercase mb-4">MyMensorCorp</h5>
+                                <h5 class="text-primary mb-4 alert alert-info">MyMensor<strong>CORP</strong></h5>
                                 {% if LANGUAGE_CODE == "pt" %}
                                     <img class="mb-4" src="{% static "images/uponrequestcomp_pt.svg" %}">
                                 {% elif LANGUAGE_CODE == "pt-br" %}
@@ -321,7 +321,7 @@
                                 <p class="pb-2">{% trans "A taylor made solution for your corporation. Drop us an email and we will build your custom setup together." %}</p>
                             </div>
                             <ul class="list-unstyled list-bordered text-xs-left my-4">
-                                <li class="py-4"><strong>{% trans "ALL MYMENSORAR FEATURES PLUS" %}</strong></li>
+                                <li class="py-4"><strong>{% trans "ALL MyMensorAR FEATURES PLUS" %}</strong></li>
                                 <li class="py-4"><strong>{% trans "API access" %}</strong>{% trans " upon request" %}
                                 </li>
                                 <li class="py-4"><strong>{% trans "Mobile App" %}</strong>{% trans " custom setups" %}
